# ordo-campaign-manager

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 20260101000001_create_users.sql  20260101000002_create_projects.sql  20260101000003_create_task_families.sql  20260101000004_create_tasks.sql  20260101000005_create_wizard_sessions.sql  20260101000006_create_chat.sql  20260101000007_rename_projects_to_campaigns.sql  20260101000008_task_dependencies.sql  20260101000009_tasks_to_campaigns.sql  20260101000010_rename_roles_remove_blocked.sql
backend/src/: config.rs  error.rs  main.rs  state.rs
backend/src/auth/: handlers.rs  middleware.rs  models.rs
backend/src/calendar/: handlers.rs
backend/src/campaign_wizard/: handlers.rs
backend/src/campaigns/: handlers.rs  models.rs
backend/src/chat/: context.rs  handlers.rs  mod.rs
backend/src/families/: handlers.rs  models.rs
backend/src/projects/: handlers.rs  models.rs
backend/src/tasks/: handlers.rs  models.rs
backend/src/users/: handlers.rs
backend/src/wizard/: ai.rs
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/components/families/: FamilyCard.tsx  WizardModal.tsx
frontend/components/layout/: Sidebar.tsx
frontend/components/tasks/: DynamicTaskForm.tsx  (+1 more)
frontend/hooks/: useCampaigns.ts  useFamilies.ts  useRole.ts  useTasks.ts  useUsers.ts
frontend/lib/: api.ts  auth.ts  sse.ts  store.ts  taskColor.ts  theme.ts
frontend/types/: index.ts
(+11 files in other folders)
