[package]
name = "ordo-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum            = { version = "0.8", features = ["macros"] }
axum-extra      = { version = "0.10", features = ["typed-header"] }
tower            = "0.5"
tower-http       = { version = "0.6", features = ["cors", "trace"] }
tokio            = { version = "1", features = ["full"] }
sqlx             = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
reqwest          = { version = "0.12", features = ["json", "stream"] }
jsonwebtoken     = "9"
argon2           = "0.5"
uuid             = { version = "1", features = ["v4", "serde"] }
chrono           = { version = "0.4", features = ["serde"] }
thiserror        = "1"
dotenvy          = "0.15"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures          = "0.3"
tokio-stream     = "0.1"
async-stream     = "0.3"
headers          = "0.4"
anyhow           = "1"
